apps/pantheon/paperless-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless
  namespace: paperless-test
spec:
  selector:
    app: paperless
  ports:
    - port: 80
      targetPort: 8000
